--- a/style/followus.css
+++ b/style/followus.css
@@ -26,7 +26,7 @@
 }
 
 .menu-toggle {
-  display: none; /* Hide by default */
+  display: none; 
   background: rgb(66, 6, 122);
   color: white;
   border: none;
@@ -154,7 +154,7 @@
   @media (max-width: 768px) {
     
     .menu-toggle {
-      display: block; /* Show only for mobile */
+      display: block; 
       margin: 10px auto; 
     }
   
