--- a/style/login.css
+++ b/style/login.css
@@ -158,7 +158,7 @@ input:-webkit-autofill {
   display: none;
 }
 
-/* Enhanced mobile responsiveness */
+/* Responsive for Tablets (768px and below) */
 @media (max-width: 768px) {
   .container {
     width: 100%;
@@ -203,8 +203,7 @@ input:-webkit-autofill {
     padding: 15px;
   }
 }
-
-/* Extra small devices */
+/* Responsive for Tablets (480px and below) */
 @media (max-width: 480px) {
   .container {
     margin: 5px auto;
