--- a/style/profile.css
+++ b/style/profile.css
@@ -276,7 +276,7 @@ body {
     background: darkred;
 }
 
-/* Responsive Design */
+/* Responsive for Tablets (768px and below) */
 @media (max-width: 768px) {
     .menu-toggle {
         display: block;
@@ -375,7 +375,7 @@ body {
     }
 }
 
-
+/* Responsive for Tablets (480px and below) */
 @media (max-width: 480px) {
 
     .profile-container {
